phone view optimizing

--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
         A new universal language
       </h2>
 
+      <figure>
+        <img
+          class="poster"
+          src="illustrations/beat-the-whites-with-the-red-wedge_1919.jpg"
+          alt="poster illustration"
+        />
+        <figcaption class="figure_caption">
+          El Lissitzky - Beat the Whites with the Red Wedge, <time>1919</time>
+        </figcaption>
+      </figure>
+      
       <p>
         El Lissitzky (<time>1890-1941</time>) is one of the most influential and
         famous designers of the period. He uses primary colours and geometric
