--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <figure>
         <img
           class="poster"
-          src="illustrations/beat-the-whites-with-the-red-wedge_1919.jpg"
+          src="portraits\el-lissitzky_self-portrait_1914.jpg"
           alt="poster illustration"
         />
         <figcaption class="figure_caption">
