--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
     <header></header>
 
     <main>
+      <figure>
+        <img class="headline" src="illustrations/headline_1.png" />
+      </figure>
+
       <h1>
         <div class="h_r">RUSSIAN</div>
         <div class="h_c">CONSTRUCTIVISM</div>
         <div class="h_year">(1913 to 1935)</div>
       </h1>
+
+      <figure>
+        <img class="headline" src="illustrations/headline_2.png" />
+      </figure>
 
       <p class="header_sub">
         In the early 1900s, several revolutionary directions in art and design
