--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <figure>
         <img
-          class="poster"
+          class="image-poster"
           src="portraits/el-lissitzky_portrait-collage.png"
           alt="a blurry grey and white selfportrait of Lissitsky layered on top of the New Man piece"
         />
@@ -132,7 +132,7 @@
 
       <figure>
         <img
-          class="poster"
+          age-poster
           src="illustrations/el-lissitzky_beat-the-whites-with-the-red-wedge_1919.jpg"
           alt="illustration of poster as described above"
         />
@@ -191,7 +191,7 @@
 
       <figure>
         <img
-          class="poster"
+          age-poster
           src="illustrations/rodchenko-alexander_books_1924.jpg"
           alt="a woman yelling with russian words comming out of her mouth like a megaphone"
         />
@@ -250,7 +250,7 @@
 
       <figure>
         <img
-          class="poster"
+          age-poster
           src="illustrations/mikhail-kaufman_in-the-spring_1929.jpg"
           alt="a man, wearing a red leatard, entering a roundoff on a black and yellow background"
         />
