--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
     <main>
       <figure>
-        <img class="headline" src="illustrations/headline_1.png" />
+        <img class="img-head" src="illustrations/headline_1.png" />
       </figure>
 
       <h1>
-        <div class="h_r">RUSSIAN</div>
-        <div class="h_c">CONSTRUCTIVISM</div>
-        <div class="h_year">(1913 to 1935)</div>
+        <div class="h-rus">RUSSIAN</div>
+        <div class="h-con">CONSTRUCTIVISM</div>
+        <div class="h-year">(1913 to 1935)</div>
       </h1>
 
       <figure>
-        <img class="headline" src="illustrations/headline_2.png" />
+        <img class="img-head" src="illustrations/headline_2.png" />
       </figure>
 
-      <p class="header_sub">
+      <p class="breadtxt">
         In the early 1900s, several revolutionary directions in art and design
         began, for later to develop into modernism, which today we know so well
         from the majority of the design we surround ourselves with within our
@@ -79,11 +79,11 @@
 
       <figure>
         <img
-          class="image-poster"
+          class="img-poster"
           src="portraits/el-lissitzky_portrait-collage.png"
           alt="a blurry grey and white selfportrait of Lissitsky layered on top of the New Man piece"
         />
-        <figcaption class="caption">
+        <figcaption class="figcap-txt">
           El Lissitzky, <time>1914</time> and <cite>New Man</cite>,
           <time>1923</time>
         </figcaption>
@@ -98,7 +98,7 @@
 
       <figure>
         <blockquote>
-          <p class="quote">
+          <p class="quote-txt">
             "One of our utopian ideas is the desire to overcome the limitations
             of the substructure, of the earthbound. We have developed this idea
             in a series of proposals. [...] The idea of the conquest of the
@@ -106,11 +106,11 @@
             for the conquest of gravity as such. It demands floating structures,
             a physical-dynamic architecture."
           </p>
-          <figcaption class="caption_author">
+          <figcaption class="figcap-author">
             — El Lissitzky <time>1929</time>
           </figcaption>
 
-          <figcaption class="caption">
+          <figcaption class="figcap-txt">
             <cite
               >'Basic Premises' in 'Rußland: Die Rekonstruktion der Architektur
               in der Sowjetunion', Moscow <time>1929</time>, in
@@ -136,7 +136,7 @@
           src="illustrations/el-lissitzky_beat-the-whites-with-the-red-wedge_1919.jpg"
           alt="illustration of poster as described above"
         />
-        <figcaption class="caption">
+        <figcaption class="figcap-txt">
           El Lissitzky - <cite>The Whites with the Red Wedge</cite>,
           <time>1919</time>
         </figcaption>
@@ -159,11 +159,11 @@
 
       <figure>
         <img
-          class="image_portrait"
+          class="img-portrait"
           src="portraits/alexander-rodchenko_portrait_1935.jpg"
           alt="Black and white close-up picture of Alexander Rodchenko smoking"
         />
-        <figcaption class="caption">
+        <figcaption class="figcap-txt">
           Alexander Rodchenko, <time>1935</time>
         </figcaption>
       </figure>
@@ -195,7 +195,7 @@
           src="illustrations/rodchenko-alexander_books_1924.jpg"
           alt="a woman yelling with russian words comming out of her mouth like a megaphone"
         />
-        <figcaption class="caption">
+        <figcaption class="figcap-txt">
           Alexander Rodchenko - <cite>Books</cite>, <time>1924</time>
         </figcaption>
       </figure>
@@ -210,12 +210,9 @@
       <h2>GUSTAV KLUTSIS</h2>
 
       <figure>
-        <img
-          class="image_portrait"
-          src="portraits/gustav-klutsis_portrait.png"
-          alt="sepia toned close-up picture of Gustav Klutsis holding a pipe"
-        />
-        <figcaption class="caption">
+        <img -clatraitmg_portrait" src="portraits/gustav-klutsis_portrait.png"
+        alt="sepia toned close-up picture of Gustav Klutsis holding a pipe" />
+        <figcaption class="figcap-txt">
           Gustav Klutsis, <time>1935</time>
         </figcaption>
       </figure>
@@ -254,7 +251,7 @@
           src="illustrations/mikhail-kaufman_in-the-spring_1929.jpg"
           alt="a man, wearing a red leatard, entering a roundoff on a black and yellow background"
         />
-        <figcaption class="caption">
+        <figcaption class="figcap-txt">
           Mikhail Kaufman - <cite>In the Spring</cite>, <time>1929</time>
         </figcaption>
       </figure>
