--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <figure>
         <img
-          age-poster
+          class="img-poster"
           src="illustrations/el-lissitzky_beat-the-whites-with-the-red-wedge_1919.jpg"
           alt="illustration of poster as described above"
         />
@@ -191,7 +191,7 @@
 
       <figure>
         <img
-          age-poster
+          class="img-poster"
           src="illustrations/rodchenko-alexander_books_1924.jpg"
           alt="a woman yelling with russian words comming out of her mouth like a megaphone"
         />
@@ -247,7 +247,7 @@
 
       <figure>
         <img
-          age-poster
+          class="img-poster"
           src="illustrations/mikhail-kaufman_in-the-spring_1929.jpg"
           alt="a man, wearing a red leatard, entering a roundoff on a black and yellow background"
         />
