--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
       <figure>
-        <img class="img-head" src="illustrations/headline_1.png" />
+        <img class="img-head" src="images/headline_1.png" />
       </figure>
 
       <h1>
@@ -23,7 +23,7 @@
       </h1>
 
       <figure>
-        <img class="img-head" src="illustrations/headline_2.png" />
+        <img class="img-head" src="images/headline_2.png" />
       </figure>
 
       <p class="breadtxt">
@@ -80,7 +80,7 @@
       <figure>
         <img
           class="img-poster"
-          src="portraits/el-lissitzky_portrait-collage.png"
+          src="images/el-lissitzky_portrait-collage.png"
           alt="a blurry grey and white selfportrait of Lissitsky layered on top of the New Man piece"
         />
         <figcaption class="figcap-txt">
@@ -133,7 +133,7 @@
       <figure>
         <img
           class="img-poster"
-          src="illustrations/el-lissitzky_beat-the-whites-with-the-red-wedge_1919.jpg"
+          src="images/el-lissitzky_beat-the-whites-with-the-red-wedge_1919.jpg"
           alt="illustration of poster as described above"
         />
         <figcaption class="figcap-txt">
@@ -160,7 +160,7 @@
       <figure>
         <img
           class="img-portrait"
-          src="portraits/alexander-rodchenko_portrait_1935.jpg"
+          src="images/alexander-rodchenko_portrait_1935.jpg"
           alt="Black and white close-up picture of Alexander Rodchenko smoking"
         />
         <figcaption class="figcap-txt">
@@ -192,7 +192,7 @@
       <figure>
         <img
           class="img-poster"
-          src="illustrations/rodchenko-alexander_books_1924.jpg"
+          src="images/rodchenko-alexander_books_1924.jpg"
           alt="a woman yelling with russian words comming out of her mouth like a megaphone"
         />
         <figcaption class="figcap-txt">
@@ -210,8 +210,11 @@
       <h2>GUSTAV KLUTSIS</h2>
 
       <figure>
-        <img -clatraitmg_portrait" src="portraits/gustav-klutsis_portrait.png"
-        alt="sepia toned close-up picture of Gustav Klutsis holding a pipe" />
+        <img
+          class="img-portrait"
+          src="images/gustav-klutsis_portrait.png"
+          alt="sepia toned close-up picture of Gustav Klutsis holding a pipe"
+        />
         <figcaption class="figcap-txt">
           Gustav Klutsis, <time>1935</time>
         </figcaption>
@@ -248,7 +251,7 @@
       <figure>
         <img
           class="img-poster"
-          src="illustrations/mikhail-kaufman_in-the-spring_1929.jpg"
+          src="images/mikhail-kaufman_in-the-spring_1929.jpg"
           alt="a man, wearing a red leatard, entering a roundoff on a black and yellow background"
         />
         <figcaption class="figcap-txt">
